fixed horizontal scroll bar

--- a/Webonomics-Website/styles.css
+++ b/Webonomics-Website/styles.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-   
+
 
 }
 body{
     background-color: #19181A;
+    overflow-x: hidden;
 }
 ul {
     list-style-type: none;
@@ -62,6 +63,7 @@ a {
     margin-top: -5em;
     padding-top: 3em;
     z-index: -1;
+
 }
 
 .logo {
@@ -87,11 +89,12 @@ a {
     opacity: .7;
 }
 .right-col-hero-section {
-    overflow-x: none;
+
 }
 .button-container {
     display: flex;
     margin-left: 60px;
+    
 }
 .coin-market-cap-button {
     padding: 1.5em;
@@ -722,6 +725,7 @@ ul.road-map-list{
     top: 2.3em;
     transform: translate(420px,20px);
     height: 600px;
+    
 }
 .contract-container {
     padding-top: 2em;
